@@ -7,6 +7,10 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  05 May 2005; Jason Stubbs <jstubbs@gentoo.org> bin/test_target_graph.py
+  pym/portage_dep.py: Added some basic utility methods to StateGraph. Reworked
+  the test script into a functional equivalent of --pretend depclean.
+
   05 May 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py: Added
   with_key() method to Atom for creating a new atom of a different key with
   the same constraints.
